--- a/tmpl/pages/ErrorPage.tmpl
+++ b/tmpl/pages/ErrorPage.tmpl
@@ -6,14 +6,16 @@
 		
 		
 		<% template main_content() %>
-			<div class="main-container header-bar-padding">
-				<div class="error-container">
-					<div class="pull-left" id="error-ornament"></div>
-					<div class="error-description-container pull-left">
-						<h1>Error <%= http_error_code %></h1>
-						<p class="lead" id="error-description"></p>
-						<br />
-						<p class="muted">¿Desea volver a la <a href="<% url "/" %>">página inicial</a>?</p>
+			<div class="main-container">
+				<div class="main-container-padding">
+					<div class="error-container">
+						<div class="pull-left" id="error-ornament"></div>
+						<div class="error-description-container pull-left">
+							<h1>Error <%= http_error_code %></h1>
+							<p class="lead" id="error-description"></p>
+							<br />
+							<p class="muted">¿Desea volver a la <a href="<% url "/" %>">página inicial</a>?</p>
+						</div>
 					</div>
 				</div>
 			</div>
