--- a/tmpl/pages/NewProblemPage.tmpl
+++ b/tmpl/pages/NewProblemPage.tmpl
@@ -6,9 +6,11 @@
 		
 		
 		<% template main_content() %>
-			<div class="main-container narrow header-bar-padding">
-				<legend>Nuevo problema</legend>
-				<% include publicate_problem_form() using forms_view %>
+			<div class="main-container narrow">
+				<div class="main-container-padding">
+					<legend>Nuevo problema</legend>
+					<% include publicate_problem_form() using forms_view %>
+				</div>
 			</div>
 		<% end template %>
 		
