--- a/tmpl/pages/UserPage.tmpl
+++ b/tmpl/pages/UserPage.tmpl
@@ -6,8 +6,10 @@
 		
 		
 		<% template main_content() %>
-			<div class="main-container narrow header-bar-padding">
-				User content (temporal)
+			<div class="main-container narrow">
+				<div class="main-container-padding">
+					User content (temporal)
+				</div>
 			</div>
 		<% end template %>
 		
