--- a/www/css/problem.css
+++ b/www/css/problem.css
@@ -1,5 +1,15 @@
 
-.problem-information-container {
+.central-content-container {
+	padding-bottom: 20px;
+	width: 62%;
+}
+
+.solutions-sidebar-container {
+	padding-bottom: 20px;
+	width: 36%;
+}
+
+.solution-information-container {
 	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #E6E6E6), color-stop(0.1, white) );
 	border-color: #D0D0D0;
 	border-radius: 5px;
@@ -10,7 +20,7 @@
 	margin-bottom: 10px;
 }
 
-.problem-description-link {
+.solution-description-link {
 	color: #333333;
 	display: block;
 	font-family: font_link_description;
@@ -19,11 +29,11 @@
 	text-shadow: 0px 0px 1px #999;
 }
 
-.problem-description-link:hover {
+.solution-description-link:hover {
 	text-shadow: 0px 0px 3px #AAA;
 }
 
-.problem-description-statistic {
+.solution-description-statistic {
 	font-size: 30px;
 	color: #8BC7FF;
 	text-shadow: 1px 1px #000;
