--- a/www/css/template.css
+++ b/www/css/template.css
@@ -8,8 +8,7 @@
 	border-top-width: 0px;
 	box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.4), -2px 0px 8px rgba(51, 51, 51, 0.4);
 	
-	/*height: 100%;
-	min-height: 100%;*/
+	min-height: 100%;
 	margin: 0px 20px;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -21,7 +20,7 @@
 	margin-left: 136px;
 }
 
-.header-bar-padding {
+.main-container-padding {
 	padding-top: 68px;
 }
 
@@ -43,8 +42,8 @@
 	background-image: url('../img/logo.png');
 	background-position: left center;
 	background-repeat: no-repeat;
-	height: 48px;
-	width: 98px;
+	height: 40px;
+	width: 80px;
 }
 
 .notifications-main-container {
@@ -57,8 +56,8 @@
 	background-image: url('../img/anonymous_mode_off.png');
 	background-position: center center;
 	background-repeat: no-repeat;
-	height: 48px;
-	width: 48px;
+	height: 40px;
+	width: 40px;
 }
 
 .toggle-anonymous-mode-button.active {
